package com.rezahdrm.behavioral.strategy;

@FunctionalInterface
public interface InsuranceCalculate {
    void calculate();
}
