package com.rezahdrm.behavioral.strategy;

public class InsuranceCalculate1399 implements InsuranceCalculate {
    @Override
    public void calculate() {
        System.out.println("Calculation of insurance according to the laws of 1399");
    }
}
