package com.rezahdrm.behavioral.strategy;

public class InsuranceCalculate1400 implements InsuranceCalculate {
    @Override
    public void calculate() {
        System.out.println("Calculation of insurance according to the laws of 1400");
    }
}
